--- a/module1-03-Python/module1-03-Python.html
+++ b/module1-03-Python/module1-03-Python.html
@@ -15410,7 +15410,7 @@ There are packages that implement pipe by overloading other operator (e.g., the 
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="Data-visualization">Data visualization<a class="anchor-link" href="#Data-visualization">&#182;</a></h2><p>Remember we want to model:</p>
-<p>thirty_day_mort ~ first_careunit + age_intime + gender + ethnicity + heart_rate + bp_mean + bp_syst + temp_f + resp_rate</p>
+<p>thirty_day_mort ~ first_careunit + age_intime + gender + ethnicity + heart_rate + temp_f </p>
 <p>Let's start with a numerical summary of variables of interest.</p>
 <p>For numerical column, we can obtain mean, standard deviation, and quartiles using the method <code>describe()</code>. For a categorical column, we obtain number of unique values, value with the most appearance, and its frequency.</p>
 
@@ -16269,7 +16269,7 @@ Name: ethnicity, dtype: int64</pre>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Pros-and-Cons-of-Python-for-Data-Science">Pros and Cons of Python for Data Science<a class="anchor-link" href="#Pros-and-Cons-of-Python-for-Data-Science">&#182;</a></h2><p><strong>Pros</strong>:</p>
+<h2 id="Pros-and-Cons-of-Python">Pros and Cons of Python<a class="anchor-link" href="#Pros-and-Cons-of-Python-for-Data-Science">&#182;</a></h2><p><strong>Pros</strong>:</p>
 <ul>
 <li>General purpose $\rightarrow$ can directly use the data analysis result to different disciplines</li>
 <li>Wide user base $\rightarrow$ rich package ecosystem</li>
